--- a/index.html
+++ b/index.html
@@ -151,20 +151,18 @@ https://templatemo.com/tm-568-digimedia
                 >
                   <div class="row">
                     <div class="col-lg-12">
-                      <h6>Digital Media Agency</h6>
-                      <h2>We Boost Your Website Traffic</h2>
+                      <h6>Digital Marketing Agency</h6>
+                      <h2>We Help You Grow Business</h2>
                       <p>
-                        This template is brought to you by TemplateMo website.
-                        Feel free to use this for a commercial purpose. You are
-                        not allowed to redistribute the template ZIP file on any
-                        other template website. Thank you.
+                        Promoting the Startups, Brands and Businesses to connect
+                        with potential clients.
                       </p>
                     </div>
-                    <div class="col-lg-12">
+                    <!-- <div class="col-lg-12">
                       <div class="border-first-button scroll-to-section">
                         <a href="#contact">Free Quote</a>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -205,25 +203,34 @@ https://templatemo.com/tm-568-digimedia
                 <div class="about-right-content">
                   <div class="section-heading">
                     <h6>About Us</h6>
-                    <h4>Who is DigiMedia <em>Agency</em></h4>
                     <div class="line-dec"></div>
                   </div>
-                  <p>
-                    We hope this DigiMedia template is useful for your work. You
-                    can use this template for any purpose. You may
-                    <a
-                      rel="nofollow"
-                      href="http://paypal.me/templatemo"
-                      target="_blank"
-                      >contribute a little amount</a
-                    >
-                    via PayPal to
-                    <a href="https://templatemo.com/contact" target="_blank"
-                      >support TemplateMo</a
-                    >
-                    in creating new templates regularly.
+                  <p class="text-justify mb-0" >
+                    Digikart is the digital marketing agency that has been set
+                    up with a vision to provide digital marketing services to
+                    the Startups, Brands and Businesses who are striving to
+                    reach their financial and branding goals.
                   </p>
-                  <div class="row">
+                  <p  class="mt-0">
+                    A digital marketing agency that helps you to reach your
+                    potential clients by creating an effective marketing
+                    strategy that will help you make your brand presence among
+                    your target audience globally.
+                  </p>
+
+                  <div class="section-heading">
+                    <h6 style="font-size: 15px;">Our Vision - <span style="color: #726ae3;">You Grow, We Grow</span></h6>
+                    <div class="line-dec"></div>
+                  </div>
+
+                  <p class="text-justify">
+                    We have a vision to connect and help every startup, brands
+                    and businesses in India and help them make their brand
+                    presence in India and globally. We are constantly working
+                    towards making our clients reach their desired financial and
+                    branding goals within the specific time frame.
+                  </p>
+                  <!-- <div class="row">
                     <div class="col-lg-4 col-sm-4">
                       <div
                         class="skill-item first-skill-item wow fadeIn"
@@ -290,7 +297,7 @@ https://templatemo.com/tm-568-digimedia
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -308,8 +315,8 @@ https://templatemo.com/tm-568-digimedia
               data-wow-duration="1s"
               data-wow-delay="0.5s"
             >
-              <h6>Our Services</h6>
-              <h4>What Our Agency <em>Provides</em></h4>
+              <h6>Our Offerings</h6>
+              <!-- <h4>What Our Agency <em>Provides</em></h4> -->
               <div class="line-dec"></div>
             </div>
           </div>
