--- a/seo.html
+++ b/seo.html
@@ -65,16 +65,10 @@ https://templatemo.com/tm-568-digimedia
           <div class="col-lg-4 col-sm-4 col-5">
             <ul class="social-media">
               <li>
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a target="_blank" href="https://www.facebook.com/digikartmediasolutions"><i class="fa fa-facebook"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-behance"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-dribbble"></i></a>
+                <a target="_blank" href="https://www.instagram.com/digikart.in/"><i class="fa fa-instagram"></i></a>
               </li>
             </ul>
           </div>
