live url updaed

--- a/about.html
+++ b/about.html
@@ -98,10 +98,10 @@ https://templatemo.com/tm-568-digimedia
                   <a href="/index.html">Home</a>
                 </li>
                 <li class="scroll-to-section">
-                  <a href="/about.html" class="active">About</a>
+                  <a href="http://digikart.in/about" class="active">About</a>
                 </li>
                 <li class="scroll-to-section">
-                  <a href="/social-media-marketing.html">Services</a>
+                  <a href="http://digikart.in/social-media-marketing">Services</a>
                 </li>
                 <!-- <li class="scroll-to-section">
               <a href="/projects.html">Projects</a>
