--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ https://templatemo.com/tm-568-digimedia
                 <li class="scroll-to-section">
                   <a href="/index.html" class="active">Home</a>
                 </li>
-                <li class="scroll-to-section"><a href="/about.html">About</a></li>
+                <li class="scroll-to-section"><a href="http://digikart.in/about">About</a></li>
                 <li class="scroll-to-section">
-                  <a href="/social-media-marketing.html">Services</a>
+                  <a href="http://digikart.in/social-media-marketing">Services</a>
                 </li>
                 <!-- <li class="scroll-to-section">
                   <a href="/projects.html">Projects</a>
