--- a/email-marketing.html
+++ b/email-marketing.html
@@ -98,10 +98,10 @@ https://templatemo.com/tm-568-digimedia
                   <a href="/index.html">Home</a>
                 </li>
                 <li class="scroll-to-section">
-                  <a href="/about.html">About</a>
+                  <a href="http://digikart.in/about">About</a>
                 </li>
                 <li class="scroll-to-section">
-                  <a href="/social-media-marketing.html" class="active">Services</a>
+                  <a href="http://digikart.in/social-media-marketing" class="active">Services</a>
                 </li>
                 <!-- <li class="scroll-to-section">
               <a href="/projects.html">Projects</a>
