routing urls updated

--- a/email-marketing.html
+++ b/email-marketing.html
@@ -148,6 +148,7 @@ https://templatemo.com/tm-568-digimedia
                   <div class="col-lg-12">
                     <div class="menu">
                       <div>
+                        <a href="http://digikart.in/social-media-marketing">
                         <div class="thumb">
                           <span class="icon"
                             ><img
@@ -157,10 +158,10 @@ https://templatemo.com/tm-568-digimedia
                           <span class="font-size-400"
                             >Social Media Marketing</span
                           >
-                        </div>
+                        </div></a>
                       </div>
                       <div>
-                        <a href="/seo.html">
+                        <a href="http://digikart.in/seo">
                           <div class="thumb">
                             <span class="icon"
                               ><img
@@ -172,7 +173,7 @@ https://templatemo.com/tm-568-digimedia
                         >
                       </div>
                       <div>
-                        <a href="/content-marketing.html">
+                        <a href="http://digikart.in//content-marketing">
                           <div class="thumb">
                             <span class="icon"
                               ><img
@@ -184,7 +185,7 @@ https://templatemo.com/tm-568-digimedia
                         >
                       </div>
                       <div class="last-thumb">
-                        <a href="/ppc.html">
+                        <a href="http://digikart.in//ppc">
                           <div class="thumb">
                             <span class="icon"
                               ><img
@@ -196,7 +197,7 @@ https://templatemo.com/tm-568-digimedia
                         >
                       </div>
                       <div class="first-thumb active">
-                        <a href="/email-marketing.html">
+                        <a href="http://digikart.in//email-marketing">
                           <div class="thumb">
                             <span class="icon"
                               ><img
