--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -160,7 +160,7 @@ https://templatemo.com/tm-568-digimedia
                         </div>
                       </div>
                       <div>
-                        <a href="/seo.html">
+                        <a href="http://digikart.in/seo">
                           <div class="thumb">
                             <span class="icon"
                               ><img
@@ -172,7 +172,7 @@ https://templatemo.com/tm-568-digimedia
                         >
                       </div>
                       <div>
-                        <a href="/content-marketing.html">
+                        <a href="http://digikart.in//content-marketing">
                           <div class="thumb">
                             <span class="icon"
                               ><img
@@ -184,7 +184,7 @@ https://templatemo.com/tm-568-digimedia
                         >
                       </div>
                       <div class="last-thumb">
-                        <a href="/ppc.html">
+                        <a href="http://digikart.in//ppc">
                           <div class="thumb">
                             <span class="icon"
                               ><img
@@ -196,7 +196,7 @@ https://templatemo.com/tm-568-digimedia
                         >
                       </div>
                       <div>
-                        <a href="/email-marketing.html">
+                        <a href="http://digikart.in//email-marketing">
                           <div class="thumb">
                             <span class="icon"
                               ><img
