--- a/about.html
+++ b/about.html
@@ -458,6 +458,19 @@ https://templatemo.com/tm-568-digimedia
       </div>
     </div>
 
+    
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <p>
+              Copyright © 2022 Digikart Media Solutions.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    
     <!-- Scripts -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
