--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -637,6 +637,18 @@ https://templatemo.com/tm-568-digimedia
         </div>
       </div>
     </div>
+    
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <p>
+              Copyright © 2022 Digikart Media Solutions.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Scripts -->
     <script src="vendor/jquery/jquery.min.js"></script>
