UI changes an image replaced wth the new one

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image.jpg"
+                                    src="assets/images/services-image.png"
                                     alt=""
                                   />
                                 </div>
@@ -450,9 +450,9 @@ https://templatemo.com/tm-568-digimedia
                                 </div>
                               </div>
                               <div class="col-lg-6 align-self-center">
-                                <div class="right-image">
+                                <div class="right-image" >
                                   <img
-                                    src="assets/images/services-image-02.jpg"
+                                    src="assets/images/seo-image.png"
                                     alt=""
                                   />
                                 </div>
@@ -491,7 +491,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image-03.jpg"
+                                    src="assets/images/content-marketing.png"
                                     alt=""
                                   />
                                 </div>
@@ -537,7 +537,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image-04.jpg"
+                                    src="assets/images/ppc-image.jpg"
                                     alt=""
                                   />
                                 </div>
@@ -582,7 +582,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image.jpg"
+                                    src="assets/images/email-marketing-image.png"
                                     alt=""
                                   />
                                 </div>
@@ -601,7 +601,7 @@ https://templatemo.com/tm-568-digimedia
       </div>
     </div>
 
-    <div id="free-quote" class="free-quote">
+    <!-- <div id="free-quote" class="free-quote">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 offset-lg-4">
@@ -658,9 +658,9 @@ https://templatemo.com/tm-568-digimedia
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div id="portfolio" class="our-portfolio section">
+    <!-- <div id="portfolio" class="our-portfolio section">
       <div class="container">
         <div class="row">
           <div class="col-lg-5">
@@ -753,9 +753,9 @@ https://templatemo.com/tm-568-digimedia
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div id="blog" class="blog">
+    <!-- <div id="blog" class="blog">
       <div class="container">
         <div class="row">
           <div
@@ -875,7 +875,7 @@ https://templatemo.com/tm-568-digimedia
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div id="contact" class="contact-us section">
       <div class="container">
