--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -243,7 +243,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image.jpg"
+                                    src="assets/images/services-image.png"
                                     alt=""
                                   />
                                 </div>
@@ -284,9 +284,9 @@ https://templatemo.com/tm-568-digimedia
                                 </div>
                               </div>
                               <div class="col-lg-6 align-self-center">
-                                <div class="right-image">
+                                <div class="right-image" >
                                   <img
-                                    src="assets/images/services-image-02.jpg"
+                                    src="assets/images/seo-image.png"
                                     alt=""
                                   />
                                 </div>
@@ -325,7 +325,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image-03.jpg"
+                                    src="assets/images/content-marketing.png"
                                     alt=""
                                   />
                                 </div>
@@ -371,7 +371,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image-04.jpg"
+                                    src="assets/images/ppc-image.jpg"
                                     alt=""
                                   />
                                 </div>
@@ -416,7 +416,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image.jpg"
+                                    src="assets/images/email-marketing-image.png"
                                     alt=""
                                   />
                                 </div>
