--- a/ppc.html
+++ b/ppc.html
@@ -244,7 +244,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image.jpg"
+                                    src="assets/images/services-image.png"
                                     alt=""
                                   />
                                 </div>
@@ -285,9 +285,9 @@ https://templatemo.com/tm-568-digimedia
                                 </div>
                               </div>
                               <div class="col-lg-6 align-self-center">
-                                <div class="right-image">
+                                <div class="right-image" >
                                   <img
-                                    src="assets/images/services-image-02.jpg"
+                                    src="assets/images/seo-image.png"
                                     alt=""
                                   />
                                 </div>
@@ -326,7 +326,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image-03.jpg"
+                                    src="assets/images/content-marketing.png"
                                     alt=""
                                   />
                                 </div>
@@ -372,7 +372,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image-04.jpg"
+                                    src="assets/images/ppc-image.jpg"
                                     alt=""
                                   />
                                 </div>
@@ -417,7 +417,7 @@ https://templatemo.com/tm-568-digimedia
                               <div class="col-lg-6 align-self-center">
                                 <div class="right-image">
                                   <img
-                                    src="assets/images/services-image.jpg"
+                                    src="assets/images/email-marketing-image.png"
                                     alt=""
                                   />
                                 </div>
